--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "react": "^18.2.0",
@@ -24,6 +28,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
     "style-loader": "^3.3.3",
